--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -31,10 +31,9 @@
     "yup": "^1.3.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
     "start:prod": "env-cmd -f .env.prod react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "proxy": "http://localhost:5000",
