--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -5,7 +5,7 @@
     "rootDir": "src",
     "module": "commonjs",
     "resolveJsonModule": false,
-    "outDir": "build",
+    "outDir": "dist",
     "esModuleInterop": true,
     "incremental": false
   },
@@ -13,5 +13,5 @@
     "require": ["tsconfig-paths/register"]
   },
   "include": ["src"],
-  "exclude": ["node_modules", "**/__tests__/*", "build"]
+  "exclude": ["node_modules", "**/__tests__/*", "dist"]
 }
