--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "allowJs": true,
     "skipLibCheck": true,
     "sourceMap": false,
-    "outDir": "./build",
+    "outDir": "./dist",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
@@ -24,5 +24,5 @@
     "noEmit": false,
     "jsx": "react-jsx"
   },
-  "exclude": ["node_modules", "build", "dist", "**/*.spec*"]
+  "exclude": ["node_modules", "dist", "**/*.spec*"]
 }
