--- a/.github/workflows/build-apps.yml
+++ b/.github/workflows/build-apps.yml
@@ -8,7 +8,7 @@ jobs:
 
         strategy:
             matrix:
-                node-version: [18.x]
+                node-version: [20.x]
 
         steps:
             - name: Git Checkout
@@ -22,11 +22,12 @@ jobs:
             - name: Install dependencies
               run: yarn install
 
-            - name: Build @shared/ui
-              run: yarn shared-ui:build
-
-            - name: Build frontend
-              run: yarn frontend:build
+            - name: Build @ecom-mern/shared
+              run: yarn build:lib
 
             - name: Build server
-              run: yarn server:build
+              run: yarn build:server
+
+            - name: Build frontend
+              run: yarn build:client
+
