--- a/.github/workflows/docker-img.yml
+++ b/.github/workflows/docker-img.yml
@@ -22,11 +22,11 @@ jobs:
               id: date
               run: echo "::set-output name=date::$(date +'%Y_%m_%d_%H_%m')"
 
-            - name: Build Express Server Image
-              run: docker build -f ./apps/server/Dockerfile -t ${{secrets.DOCKER_HUB_USERNAME}}/e-commerce-express:${{ steps.date.outputs.date }} .
+            - name: Build Server Image
+              run: docker build -f ./apps/server/Dockerfile -t ${{secrets.DOCKER_HUB_USERNAME}}/ecom-mern-server:${{ steps.date.outputs.date }} .
 
             - name: Build Frontend Image
-              run: docker build -f ./apps/frontend/Dockerfile -t ${{ secrets.DOCKER_HUB_USERNAME }}/e-commerce-frontend:${{ steps.date.outputs.date }} .
+              run: docker build -f ./apps/client/Dockerfile -t ${{ secrets.DOCKER_HUB_USERNAME }}/ecom-mern-client:${{ steps.date.outputs.date }} .
 
             - name: Login to DockerHub
               uses: docker/login-action@v2
@@ -35,7 +35,7 @@ jobs:
                   password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
             - name: Push Backend Image to Docker Hub
-              run: docker push  ${{ secrets.DOCKER_HUB_USERNAME }}/e-commerce-server:${{ steps.date.outputs.date }}
+              run: docker push  ${{ secrets.DOCKER_HUB_USERNAME }}/ecom-mern-server:${{ steps.date.outputs.date }}
               
             - name: Push Frontend Image to Docker Hub
-              run: docker push  ${{ secrets.DOCKER_HUB_USERNAME }}/e-commerce-frontend:${{ steps.date.outputs.date }}
+              run: docker push  ${{ secrets.DOCKER_HUB_USERNAME }}/ecom-mern-client:${{ steps.date.outputs.date }}
