--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -21,6 +21,7 @@
     "express-mongo-sanitize": "^2.2.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.29.4",
     "mongoose": "^7.6.1",
     "pdfkit": "^0.14.0",
     "razorpay": "^2.9.2",
@@ -41,6 +42,7 @@
     "nodemon": "^3.0.2",
     "rimraf": "^5.0.5",
     "tsconfig-paths": "^4.2.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.0.4"
   }
 }
