--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "author": "Nishant Kohli",
   "version": "1.0.0",
   "private": true,
+  "engines" : { 
+    "node" : ">=20.10.0" 
+  },
   "workspaces": [
     "apps/*",
     "packages/*"
@@ -29,5 +32,6 @@
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "turbo": "^1.11.3"
-  }
+  },
+  "packageManager": "yarn@1.22.19"
 }
