add eslint config, lint client

--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "nodemon -r tsconfig-paths/register src/index.ts",
     "build": "rimraf dist & tsc",
-    "build:run": "ts-node dist/index.js"
+    "build:run": "ts-node dist/index.js",
+    "lint": "eslint --fix .",
+    "lint:check": "eslint ."
   },
   "dependencies": {
     "@ecom/mern-shared": "*",
@@ -31,6 +33,8 @@
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.11.1",
+    "@nish1896/eslint-flat-config": "^1.0.2",
     "@types/bcrypt": "5.0.0",
     "@types/cookie-parser": "1.4.4",
     "@types/cors": "^2.8.14",
@@ -39,6 +43,7 @@
     "@types/jsonwebtoken": "^9.0.3",
     "@types/pdfkit": "^0.13.3",
     "@types/node": "^20.2.1",
+    "eslint": "^9.11.1",
     "nodemon": "^3.0.2",
     "rimraf": "^5.0.5",
     "tsconfig-paths": "^4.2.0",
