--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -34,7 +34,9 @@
     "dev": "react-scripts start",
     "start:prod": "env-cmd -f .env.prod react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint --fix .",
+    "lint:check": "eslint ."
   },
   "proxy": "http://localhost:5000",
   "browserslist": {
@@ -50,6 +52,8 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^9.11.1",
+    "@nish1896/eslint-flat-config": "^1.0.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
@@ -59,6 +63,7 @@
     "@types/react-dom": "^18.2.4",
     "@types/react-image-gallery": "^1.2.3",
     "@types/react-redux": "^7.1.25",
-    "@types/react-router-dom": "^5.3.3"
+    "@types/react-router-dom": "^5.3.3",
+    "eslint": "^9.11.1"
   }
 }
