--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -11,6 +11,9 @@
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.11.1",
+    "@nish1896/eslint-flat-config": "^1.0.2",
+    "eslint": "^9.11.1",
     "tsc": "^2.0.4",    
     "typescript": "^5.0.4"
   }
