--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,44 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
+# folders
 node_modules
+logs
 .pnp
 .pnp.js
 .turbo
-
-# testing
-/coverage
+.next
+.vercel
 
 # production
-**/build
-**/dist
+build
+dist
+*.tsbuildinfo
+
+# testing
+coverage
+.nyc_output
 
 # misc
-**/.DS_Store
-**/.env
-**/.env.*
+.DS_Store
+.env
+.env.*
+*.log
+.pnp.js
+*.pem
+next-env.d.ts
 
-**/*.log
-**/logs
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
 
-tsconfig.build.tsbuildinfo
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
