--- a/apps/server/.env_sample
+++ b/apps/server/.env_sample
@@ -14,6 +14,7 @@ ALGOLIA_WRITE_KEY=
 RAZORPAY_KEY_ID=
 RAZORPAY_SECRET=
 CLIENT_URL=
+SWAGGER_URL=
 SENDGRID_API_KEY=
 SENDGRID_SIGNUP_TEMPLATE_ID=
 SENDGRID_SENDER_EMAIL=
