--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -27,7 +27,9 @@
     "razorpay": "^2.9.2",
     "redis": "^4.6.10",
     "slugify": "^1.6.6",
+    "swagger-ui-express": "5.0.1",
     "winston": "3.11.0",
+    "yaml": "^2.5.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
@@ -39,6 +41,7 @@
     "@types/jsonwebtoken": "^9.0.3",
     "@types/pdfkit": "^0.13.3",
     "@types/node": "^20.2.1",
+    "@types/swagger-ui-express": "4.1.6",
     "nodemon": "^3.0.2",
     "rimraf": "^5.0.5",
     "tsconfig-paths": "^4.2.0",
