--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/index.js",
   "license": "MIT",
   "scripts": {
-    "build:lib": "tsc --build"
+    "lib:build": "tsc --build"
   },
   "dependencies": {
     "yup": "^1.3.2"
