--- a/apps/server/src/docs/paths/test2.yml
+++ b/apps/server/src/docs/paths/test2.yml
@@ -1,17 +1,12 @@
-# openapi: 3.0.0
-# info:
-#   title: Example API
-#   description: A sample API
-#   version: 1.0.0
 paths:
-  /users:
+  /products:
     get:
-      summary: Get all users
+      summary: Get all products
       tags: 
-        - Users
+        - Products
       responses:
         '200':
-          description: A list of users
+          description: A list of products
           content:
             application/json:
               schema:
