--- a/apps/server/src/docs/paths/test.yml
+++ b/apps/server/src/docs/paths/test.yml
@@ -1,20 +1,8 @@
-# openapi: 3.0.0
-# info:
-#   title: Example API
-#   description: A sample API
-#   version: 1.0.0
-paths:
-  /users:
-    get:
-      summary: Get all users
-      tags: 
-        - Users
-      responses:
-        '200':
-          description: A list of users
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  type: string
+/users:
+  get:
+    summary: Get all users
+    tags:
+      - Users
+    responses:
+      "200": 
+        $ref: "#/components/responses/SUCCESS"
