--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -10,42 +10,42 @@
   },
   "dependencies": {
     "@ecom/mern-shared": "*",
-    "@sendgrid/mail": "^8.1.0",
+    "@sendgrid/mail": "^8.1.3",
     "algoliasearch": "^4.20.0",
     "bcrypt": "^5.1.1",
     "chalk": "4.1.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "csv-parse": "5.5.2",
-    "express": "^4.18.2",
+    "csv-parse": "5.5.6",
+    "dotenv":"^16.4.5",
+    "express": "^4.21.0",
     "express-mongo-sanitize": "^2.2.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "moment": "^2.29.4",
+    "moment": "^2.30.1",
     "mongoose": "^7.6.1",
-    "pdfkit": "^0.14.0",
-    "razorpay": "^2.9.2",
-    "redis": "^4.6.10",
+    "pdfkit": "^0.15.0",
+    "razorpay": "^2.9.4",
+    "redis": "^4.7.0",
     "slugify": "^1.6.6",
     "swagger-ui-express": "5.0.1",
-    "winston": "3.11.0",
+    "winston": "3.14.2",
     "yaml": "^2.5.1",
     "yup": "^1.3.2"
   },
   "devDependencies": {
-    "@types/bcrypt": "5.0.0",
-    "@types/cookie-parser": "1.4.4",
-    "@types/cors": "^2.8.14",
-    "@types/dotenv": "^8.2.0",
+    "@types/bcrypt": "5.0.2",
+    "@types/cookie-parser": "1.4.7",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.3",
-    "@types/pdfkit": "^0.13.3",
-    "@types/node": "^20.2.1",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/pdfkit": "^0.13.5",
+    "@types/node": "^22.7.4",
     "@types/swagger-ui-express": "4.1.6",
     "nodemon": "^3.1.7",
-    "rimraf": "^5.0.5",
+    "rimraf": "^6.0.1",
     "tsconfig-paths": "^4.2.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.0.4"
+    "typescript": "^5.6.2"
   }
 }
