--- a/apps/server/src/docs/components/response.yml
+++ b/apps/server/src/docs/components/response.yml
@@ -1,9 +1,22 @@
-SUCCESS:
-  description: A JSON array of user names
-  content:
-    application/json:
+security:
+  bearerAuth:
+    type: http
+    scheme: bearer
+    bearerFormat: JWT
+apiResponse:
+  SUCCESS:
+    description: A JSON array of user names
+    content:
+      application/json:
+        schema:
+          type: array
+          items:
+            type: string
+          example: [harry, jason, terry]
+  UNAUTHORIZED:
+    description: Unauthenticated user
+    content:
       schema:
-        type: array
-        items:
-          type: string
-        example: [harry, jason, terry]
+        type: text
+  USER_NOT_FOUND:
+    description: User does not exist in Database
