--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "shared": "yarn workspace @ecom/mern-shared lib:build",
     "server": "yarn workspace ecom-mern-server dev",
     "server:build": "yarn workspace ecom-mern-server build",
+    "server:start": "yarn workspace ecom-mern-server start",
     "client": "yarn workspace ecom-mern-client dev",
     "client:build": "yarn workspace ecom-mern-client build",
+    "client:start": "yarn workspace ecom-mern-client start",
     "prepare": "husky install",
     "build-apps": "turbo build",
     "run-apps": "turbo dev",
