--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -3,6 +3,13 @@
   "author": "Nishant Kohli",
   "version": "1.0.0",
   "private": true,
+  "scripts": {
+    "dev": "react-scripts start",
+    "build": "react-scripts build",
+    "start": "yarn build && env-cmd -f .env.prod react-scripts start",
+    "eject": "react-scripts eject"
+  },
+  "proxy": "http://localhost:8000",
   "dependencies": {
     "@ecom/mern-shared": "*",
     "@emotion/react": "^11.11.0",
@@ -30,25 +37,6 @@
     "web-vitals": "^3.3.1",
     "yup": "^1.3.2"
   },
-  "scripts": {
-    "dev": "react-scripts start",
-    "start:prod": "env-cmd -f .env.prod react-scripts start",
-    "build": "react-scripts build",
-    "eject": "react-scripts eject"
-  },
-  "proxy": "http://localhost:8000",
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
@@ -60,5 +48,17 @@
     "@types/react-image-gallery": "^1.2.3",
     "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
