--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon -r tsconfig-paths/register src/index.ts",
     "build": "rimraf dist & tsc && cp -r src/docs/* ./dist/docs",
-    "start": "yarn build && TS_NODE_BASEURL=./dist node -r tsconfig-paths/register dist/index.js"
+    "start": "yarn build && TS_NODE_BASEURL=./dist node -r tsconfig-paths/register dist/index.js",
+    "test": "jest --runInBand"
   },
   "dependencies": {
     "@ecom/mern-shared": "*",
@@ -21,6 +22,7 @@
     "express": "^4.21.0",
     "express-mongo-sanitize": "^2.2.0",
     "helmet": "^7.1.0",
+    "http-status": "^1.7.4",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^7.6.1",
@@ -38,13 +40,18 @@
     "@types/cookie-parser": "1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.13",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/pdfkit": "^0.13.5",
     "@types/node": "^22.7.4",
+    "@types/supertest": "^6.0.2",
     "@types/swagger-ui-express": "4.1.6",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "rimraf": "^6.0.1",
+    "supertest": "^7.0.0",
     "tsconfig-paths": "^4.2.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   }
