--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -36,6 +36,7 @@
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.0.3",
     "@types/bcrypt": "5.0.2",
     "@types/cookie-parser": "1.4.7",
     "@types/cors": "^2.8.17",
