--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -7,7 +7,10 @@
     "resolveJsonModule": false,
     "outDir": "dist",
     "esModuleInterop": true,
-    "incremental": false
+    "incremental": false,
+    "paths": {
+      "@shared/*": ["../../packages/shared/*"]
+    }
   },
   "ts-node": {
     "require": ["tsconfig-paths/register"]
