update alias imports for server

--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "baseUrl": "src",
+    "baseUrl": "./",
     "rootDir": "src",
     "module": "commonjs",
     "resolveJsonModule": false,
@@ -9,6 +9,7 @@
     "esModuleInterop": true,
     "incremental": false,
     "paths": {
+      "@/*": ["src/*"],
       "@shared/*": ["../../packages/shared/*"]
     }
   },
