--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "nodemon -r tsconfig-paths/register src/index.ts",
-    "build": "rimraf dist & tsc && cp -r src/docs/* ./dist/docs",
+    "build": "rimraf dist && tsc && tsc-alias && cp -r src/docs/* ./dist/docs",
     "start": "yarn build && TS_NODE_BASEURL=./dist node -r tsconfig-paths/register dist/index.js",
     "test": "jest --runInBand"
   },
@@ -51,6 +51,7 @@
     "nodemon": "^3.1.7",
     "rimraf": "^6.0.1",
     "supertest": "^7.0.0",
+    "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
