rename to @ecom-mern/shared, add setup script

--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -9,8 +9,7 @@
     "esModuleInterop": true,
     "incremental": false,
     "paths": {
-      "@/*": ["src/*"],
-      "@shared/*": ["../../packages/shared/*"]
+      "@/*": ["src/*"]
     }
   },
   "ts-node": {
