--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -4,13 +4,12 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "nodemon -r tsconfig-paths/register src/index.ts",
+    "dev": "nodemon --exec 'ts-node -r tsconfig-paths/register src/index.ts'",
     "build": "rimraf dist && tsc && tsc-alias && cp -r src/docs/* ./dist/docs",
     "start": "yarn build && TS_NODE_BASEURL=./dist node -r tsconfig-paths/register dist/index.js",
     "test": "jest --runInBand"
   },
   "dependencies": {
-    "@ecom/mern-shared": "*",
     "@sendgrid/mail": "^8.1.3",
     "algoliasearch": "^4.20.0",
     "bcrypt": "^5.1.1",
@@ -40,7 +39,6 @@
     "@types/bcrypt": "5.0.2",
     "@types/cookie-parser": "1.4.7",
     "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.13",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/pdfkit": "^0.13.5",
