--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -18,7 +18,7 @@
     "cors": "^2.8.5",
     "csv-parse": "5.5.6",
     "dotenv": "^16.4.5",
-    "express": "^4.21.0",
+    "express": "^4.21.1",
     "express-mongo-sanitize": "^2.2.0",
     "helmet": "^7.1.0",
     "http-status": "^1.7.4",
@@ -30,7 +30,7 @@
     "redis": "^4.7.0",
     "slugify": "^1.6.6",
     "swagger-ui-express": "5.0.1",
-    "winston": "3.14.2",
+    "winston": "3.15.0",
     "yaml": "^2.5.1",
     "yup": "^1.3.2"
   },
@@ -39,6 +39,8 @@
     "@types/bcrypt": "5.0.2",
     "@types/cookie-parser": "1.4.7",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/express-serve-static-core": "^4.19.5",
     "@types/jest": "^29.5.13",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/pdfkit": "^0.13.5",
