--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -4,7 +4,7 @@
     "baseUrl": "./",
     "rootDir": "src",
     "module": "commonjs",
-    "resolveJsonModule": false,
+    "resolveJsonModule": true,
     "outDir": "dist",
     "esModuleInterop": true,
     "incremental": false,
