--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon --exec 'ts-node -r tsconfig-paths/register src/index.ts'",
     "build": "rimraf dist && tsc && tsc-alias && cp -r src/docs/* ./dist/docs",
     "start": "yarn build && TS_NODE_BASEURL=./dist node -r tsconfig-paths/register dist/index.js",
-    "test": "jest --runInBand"
+    "test": "node --expose-gc ./node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
     "@sendgrid/mail": "^8.1.3",
