--- a/.github/workflows/build-apps.yml
+++ b/.github/workflows/build-apps.yml
@@ -1,33 +1,29 @@
-name: github-actions
+name: Build Apps
 
 on: [push]
 
 jobs:
-    build:
-        runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-latest
 
-        strategy:
-            matrix:
-                node-version: [20.x]
+    strategy:
+      matrix:
+        node-version: [20.x]
 
-        steps:
-            - name: Git Checkout
-              uses: actions/checkout@v2
+    steps:
+      - name: Git Checkout
+        uses: actions/checkout@v2
 
-            - name: Setup Node env
-              uses: actions/setup-node@v2.1.4
-              with:
-                  node-version: ${{ matrix.node-version }}
+      - name: Setup Node env
+        uses: actions/setup-node@v2.1.4
+        with:
+          node-version: ${{ matrix.node-version }}
 
-            - name: Install dependencies
-              run: yarn install
+      - name: Install dependencies and link @ecom-mern/shared
+        run: sh setup.sh
 
-            - name: Build @ecom-mern/shared
-              run: yarn lib:build
+      - name: Build server
+        run: yarn server:build
 
-            - name: Build server
-              run: yarn server:build
-
-            - name: Build frontend
-              run: yarn client:build
-
+      - name: Build frontend
+        run: yarn client:build
