--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -11,6 +11,7 @@
   },
   "proxy": "http://localhost:8000",
   "dependencies": {
+    "@ecom-mern/shared": "*",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.2",
@@ -21,7 +22,7 @@
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "env-cmd": "^10.1.0",
-    "moment": "^2.29.4",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
