--- a/apps/server/Dockerfile
+++ b/apps/server/Dockerfile
@@ -5,13 +5,13 @@ WORKDIR /app
 
 # Run yarn only if package.json changes
 # copied tsconfig as shared-ui's tsconfig extends rootDir's tsconfig
-COPY turbo.json .
-COPY tsconfig.json .
 COPY package.json .
+COPY tsconfig.json .
+COPY turbo.json .
+COPY yarn.lock .
 
 # first create these directories, else the copying won't work.
-RUN mkdir -p packages/shared
-RUN mkdir -p apps/server
+RUN mkdir -p packages/shared && mkdir -p apps/server
 
 # copying only the required packages
 COPY ./packages/shared/package.json packages/shared
@@ -20,12 +20,11 @@ COPY ./packages/shared packages/shared
 COPY ./apps/server/package.json apps/server
 COPY ./apps/server apps/server
 
-# install node_modules
-RUN yarn
-RUN yarn lib:build
+# install node_modules & build @ecom-mern/shared
+RUN yarn install --frozen-lockfile && yarn shared
 
 # build server
-RUN yarn build-apps
+RUN yarn server:build
 
 # run server in dev env
-CMD ["yarn", "workspace ecom-mern-server", "build:run"]
+CMD ["yarn", "server:start"]
