--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -10,6 +10,7 @@
     "test": "node --expose-gc ./node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
+    "@ecom-mern/shared": "*",
     "@sendgrid/mail": "^8.1.3",
     "algoliasearch": "^4.20.0",
     "bcrypt": "^5.1.1",
@@ -44,7 +45,6 @@
     "@types/pdfkit": "^0.13.5",
     "@types/node": "^22.7.4",
     "@types/swagger-ui-express": "4.1.6",
-    "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "rimraf": "^6.0.1",
     "tsc-alias": "^1.8.10",
