--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "client": "yarn workspace ecom-mern-client dev",
     "client:build": "yarn workspace ecom-mern-client build",
     "client:start": "yarn workspace ecom-mern-client start",
-    "prepare": "husky install",
+    "prepare": "husky",
     "build-apps": "turbo build",
     "run-apps": "turbo dev",
     "prettier": "prettier --write * --ignore-unknown"
@@ -29,10 +29,10 @@
     ]
   },
   "devDependencies": {
-    "husky": "^8.0.1",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
-    "turbo": "^1.11.3"
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
+    "prettier": "^3.3.3",
+    "turbo": "^2.1.3"
   },
   "packageManager": "yarn@1.22.19"
 }
