--- a/.github/workflows/build-apps.yml
+++ b/.github/workflows/build-apps.yml
@@ -9,18 +9,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [20.x]
-
     steps:
-      - name: Git Checkout
-        uses: actions/checkout@v2
-
-      - name: Setup Node env
-        uses: actions/setup-node@v2.1.4
+      - name: Check out code
+        uses: actions/checkout@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          fetch-depth: 0
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: yarn
 
       - name: Install dependencies and link @ecom-mern/shared
         run: sh setup.sh
