--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon --exec 'ts-node -r tsconfig-paths/register src/index.ts'",
     "build": "rimraf dist && tsc && tsc-alias && cp -r src/docs/* ./dist/docs",
     "start": "yarn build && TS_NODE_BASEURL=./dist node -r tsconfig-paths/register dist/index.js",
-    "test": "node --expose-gc ./node_modules/.bin/jest --runInBand"
+    "lint": "eslint --fix .",
+    "lint:check": "eslint ."
   },
   "dependencies": {
     "@ecom-mern/shared": "*",
@@ -36,6 +37,8 @@
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.12.0",
+    "@nish1896/eslint-flat-config": "^1.0.2",
     "@types/bcrypt": "5.0.2",
     "@types/cookie-parser": "1.4.7",
     "@types/cors": "^2.8.17",
@@ -45,6 +48,7 @@
     "@types/pdfkit": "^0.13.5",
     "@types/node": "^22.7.4",
     "@types/swagger-ui-express": "4.1.6",
+    "eslint": "^9.12.0",
     "nodemon": "^3.1.7",
     "rimraf": "^6.0.1",
     "tsc-alias": "^1.8.10",
