--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -5,12 +5,17 @@
   "main": "./dist/index.js",
   "license": "MIT",
   "scripts": {
-    "lib:build": "tsc --build"
+    "lib:build": "tsc --build",
+    "lint": "eslint --fix .",
+    "lint:check": "eslint ."
   },
   "dependencies": {
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.12.0",
+    "@nish1896/eslint-flat-config": "^1.0.2",
+    "eslint": "^9.12.0",
     "tsc": "^2.0.4",
     "typescript": "^5.6.2"
   }
