--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   ],
   "scripts": {
     "shared": "yarn workspace @ecom-mern/shared lib:build",
+    "shared:lint": "yarn workspace @ecom-mern/shared lint",
     "server": "yarn workspace ecom-mern-server dev",
     "server:build": "yarn workspace ecom-mern-server build",
     "server:start": "yarn workspace ecom-mern-server start",
+    "server:lint": "yarn workspace ecom-mern-server lint",
     "client": "yarn workspace ecom-mern-client dev",
     "client:build": "yarn workspace ecom-mern-client build",
+    "client:lint": "yarn workspace ecom-mern-client lint",
     "client:start": "yarn workspace ecom-mern-client start",
     "prepare": "husky",
     "build-apps": "turbo build",
