--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "prettier": "prettier --write * --ignore-unknown"
   },
   "lint-staged": {
-    "*.{ts,js,tsx,jsx,html,scss,css,yml,yaml}": [
+    "*.{ts,js,mjs,tsx,jsx,html,scss,css,yml,yaml}": [
       "yarn run prettier"
     ]
   },
